--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -21,7 +21,7 @@
     </section>
     
   </header>
-<hr>
+<hr  mat-divider>
   <div id="bio" class="homepage-tile">
     <h1>Bio</h1>
     <button mat-button (click)="english = !english" matTooltip="Toggle language ( EN | PL )" #tooltip="matTooltip"
@@ -132,19 +132,19 @@
         </mat-tab>
       </mat-tab-group>
     </ng-template>
-    <hr>
+    <hr mat-divider>
   </div>
 
   <div id="projects" class="homepage-tile">
     <h1>Projects</h1>
     <app-projects-grid></app-projects-grid>
   </div>
-<hr>
+<hr   mat-divider >
   <div id="about" class="homepage-tile">
     <h1>About me</h1>
     <app-ngb-carusel></app-ngb-carusel>
   </div>
-<hr>
+<hr  mat-divider>
   <div id="contact" class="homepage-tile">
     <h1>Contact me</h1>
 
