--- a/src/app/components/projects-grid/projects-grid.component.scss
+++ b/src/app/components/projects-grid/projects-grid.component.scss
@@ -8,18 +8,16 @@ width: 100%;
 height: 100%;
 
 }
-.dashboard-card {
- 
+.dashboard-card { 
   top: 15px;
-  left: 15px;
-  right: 15px;
   bottom: 15px;
   padding: 0;
-  width: 95%;
-  height: 95%;
+  width: 90%;
+  height: 90%;
   max-width: 100%;
 max-height: 100%;
- 
+ margin-left:auto;
+    margin-right:auto;
   
 }
 
@@ -28,23 +26,27 @@ mat-card:hover {
   }
 
 .card-title{
-    font-size: 26px;
+    font-size: 18px;
     font-weight: bold;
-    line-height: 26px;
+    line-height: 18px;
     margin-left:auto;
     margin-right:auto;
-    margin-top: 15px;
+    margin-top: 10px;
+   
 }
 .card-subtitle{
-font-size: 20px;
+font-size: 14px;
     font-weight: 300;
-    line-height: 28px;
+    line-height: 14px;
     margin-left: 15px;
 }
 .card-description{
 margin-top: 15px;
 margin-left: 35px;
-
+font-size: 12px;
+    font-weight: 300;
+    line-height: 14px;
+    margin-left: 15px;
 
 }
 .more-button {
