--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <mat-toolbar class="side-nav-toolbar-spacer">
+    <mat-toolbar class="side-nav-toolbar-spacer" matTooltip="Esc key to hide menu" #tooltip="matTooltip">
       <button mat-icon-button (click)="openUserLogin()"
       matTooltip="Sign In" #tooltip="matTooltip" type="button" aria-label="Sign In"
       >
