--- a/src/app/components/projects-grid/projects-grid.component.scss
+++ b/src/app/components/projects-grid/projects-grid.component.scss
@@ -41,7 +41,7 @@ font-size: 14px;
     margin-left: 15px;
 }
 .card-description{
-margin-top: 15px;
+margin-top: 5px;
 margin-left: 35px;
 font-size: 12px;
     font-weight: 300;
@@ -76,12 +76,12 @@ matbutton{
 flex:1 1 0;
 }
 mat-card img{
-        width: 60%;
-        height: auto;
+        width: auto;
+        height: 170px;       
   display:block;
   margin-left:auto;
   margin-right:auto;
   margin-top: 3%;
-  max-width: 50vw;
+  max-width: 500px;
   
 }
