--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -184,8 +184,14 @@ mat-icon {
     h2 {
       font-size: 18px;
       font-weight: 300;
-      line-height: 20px;
-      margin: 15px 10px 25px 10px;
+      line-height: 18px;
+      margin: 15px 10px;
+    }
+    p{
+       font-size: 12px;
+      font-weight: 300;
+      line-height: 12px;
+     margin: 15px 10px;
     }
     ul li {
       font-size: 12px;
