--- a/src/app/components/messages/messages.component.css
+++ b/src/app/components/messages/messages.component.css
@@ -1,36 +1,40 @@
+*{
+   z-index: 11
+}
 .container {
   font-size: medium;
-  position: absolute;
-  right: 5px;
-  top: 50px;
+  position: fixed;
+  right: 10px;
+  top: 60px;
   width: auto;
   height: auto;
   max-height: 90vh;
-  z-index: 2;
+ 
+  
 }
 
 .container h1 {
   font-size: 22px;
   font-weight: bold;
   line-height: 22px;
-  margin: 15px 0px;
+  margin: 5px 0px;
 }
 
 .container h2 {
   font-size: 16px;
   font-weight: 300;
   line-height: 20px;
-  margin: 0px 0 15px 0;
+  margin: 0px 0 10px 0;
 }
 .container p {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 200;
-  line-height: 14px;
-  margin: 0 0 10px 0;
+  line-height: 12px;
+  margin: 5px 0px;
   padding: 0;
 }
 
 .message {
-  margin: 5px;
+  margin: 5px 0px;
   
 }
