--- a/src/app/components/messages/messages.component.html
+++ b/src/app/components/messages/messages.component.html
@@ -1,6 +1,6 @@
 <button mat-icon-button (click)="ToggleMessageComponent()">
   <mat-icon matBadge="12" matBadgeColor="accent" class="badge-icon favorite-icon" aria-label="Toggle Display Messages"
-    matTooltip="Toggle Display Messages" #tooltip="matTooltip">favorite</mat-icon>
+    matTooltip="Toggle Display Messages" #tooltip="matTooltip">message</mat-icon>
 </button>
 
 <div *ngIf="!ToggleMessages" class="container">
@@ -8,7 +8,6 @@
   <h2>
     Hi,{{title}} {{ name }} from {{country}}</h2>
 
-  
 
   <div *ngFor="let message of messageService.messages">
     <p class="message">
