--- a/src/app/components/projects-grid/projects-grid.component.html
+++ b/src/app/components/projects-grid/projects-grid.component.html
@@ -1,19 +1,20 @@
 <div class="grid-container">
-    <mat-grid-list cols="2" rowHeight="350px">
-    <mat-grid-tile class="grid-tile" *ngFor="let card of cards | async" [colspan]="card.cols"  
-[rowspan]="card.rows" [title]="card.title" subtitle="card.subtitle" img_url="card.img_url" gh_url="card.gh_url" gh_pages_url="card.gh_pages_url" description="card.description">
-      <mat-card tabindex="0" class="dashboard-card"
-      
-      #tooltip="matTooltip" matTooltip=" {{card.title}} project card">
+  <mat-grid-list cols="2" rowHeight="350px">
+    <mat-grid-tile class="grid-tile" *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows"
+      [title]="card.title" subtitle="card.subtitle" img_url="card.img_url" gh_url="card.gh_url"
+      gh_pages_url="card.gh_pages_url" description="card.description">
+      <mat-card tabindex="0" class="dashboard-card" #tooltip="matTooltip" matTooltip=" {{card.title}} project card">
         <mat-card-header>
           <mat-card-title class="card-title">
             {{card.title}}
-            <button mat-icon-button class="more-button" #tooltip="matTooltip" matTooltip="more"  [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+            <button mat-icon-button class="more-button" #tooltip="matTooltip" matTooltip="more"
+              [matMenuTriggerFor]="menu" aria-label="Toggle menu">
               <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item #tooltip="matTooltip" matTooltip="Read more about {{card.title}} project">More</button>
-              
+              <button mat-menu-item #tooltip="matTooltip"
+                matTooltip="Read more about {{card.title}} project">More</button>
+
               <a mat-menu-item href="{{card.gh_url}}" target="_blank" #tooltip="matTooltip"
                 matTooltip="Github page">Github</a>
               <a mat-menu-item href="{{card.gh_pages_url}}" target="_blank" #tooltip="matTooltip"
@@ -25,8 +26,8 @@
           <div class="card-subtitle">{{card.subtitle}}</div>
           <img mat-card-s-image [src]="card.img_url" class="img_project">
           <div class="card-description">{{card.description}}</div>
-        <mat-card-actions class="button-group">          
-        </mat-card-actions>
+          <mat-card-actions class="button-group">
+          </mat-card-actions>
 
         </mat-card-content>
       </mat-card>
