add file tree component

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -36,18 +36,16 @@
 
       <mat-tab label="Short">
         <div class="mat-tab">
-          <h1>
-            Short bio
-          </h1>
+       
           <h2>
-            Hi, I'm Jan Warzecha from Wrocław, Poland
+           I'm Jan Warzecha from Wrocław, Poland
           </h2>
           <ul>
             <li>
-              I'm a self-thought programmer, coding since July 2020
+              Self-thought programmer, coding since July 2020
             </li>
             <li>
-              HTML, CSS, JavaScript, TypeScript, Angular Material,
+              HTML, CSS, JavaScript, TypeScript, Angular 13, Angular Material,
             </li>
             <li>
               English B2/C1
@@ -60,7 +58,7 @@
               environment / energy
             </li>
             <li>
-              I'm currently looking to remotely join frontend / full-stack team
+            <b> I'm currently looking to remotely join frontend / full-stack team</b>
             </li>
           </ul>
         </div>
@@ -271,7 +269,7 @@
 
 
 
-    <mat-form-field class="example-full-width" appearance="fill">
+    <mat-form-field class="example-full-width" >
       <mat-label>Leave a comment</mat-label>
       <textarea matInput placeholder="yeah... write something"></textarea>
     </mat-form-field>
