--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -1,7 +1,68 @@
-<h1 mat-dialog-title>Sign In</h1>
-<div mat-dialog-content>Select your title, Enter name and select country</div>
+<h1 mat-dialog-title>User Login Page</h1>
+<div mat-dialog-content class="mat-typography">
+    <h2>Sing Up</h2>
+</div>
+
+<form class="mat-typography" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+    <mat-form-field>
+        <mat-label for="first-name">First Name: </mat-label>
+        <input matInput id="first-name" type="text" formControlName="firstName" required placeholder="enter your name" >
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label for="last-name">Last Name: </mat-label>
+        <input matInput id="last-name" type="text" formControlName="lastName" placeholder="enter your last name">
+    </mat-form-field>
+
+    <div formGroupName="address">
+
+        <h2>Address</h2>
+        <mat-form-field>
+            <mat-label for="street">Street: </mat-label>
+            <input matInput id="street" type="text" formControlName="street" placeholder="enter street name">
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label for="city">City: </mat-label>
+            <input matInput id="city" type="text" formControlName="city" placeholder="Enter City name">
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label for="state">State: </mat-label>
+            <input matInput id="state" type="text" formControlName="state" placeholder="Enter state">
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label for="zip">Zip Code: </mat-label>
+            <input matInput id="zip" type="text" formControlName="zip" placeholder="Zip Code">
+        </mat-form-field>
+    </div>
+<!--
+    <div formArrayName="aliases">
+        <button mat-button (click)="addAlias()" type="button">+alias</button>
+
+        <div *ngFor="let alias of aliases.controls; let i=index">
+        The repeated alias template
+            <label for="alias-{{ i }}">Alias:</label>
+            <input id="alias-{{ i }}" type="text" [formControlName]="i">
+        </div>
+       
+    </div>
+   -->
+    <p>Complete the form to enable button.</p>
+    
+    <div mat-dialog-actions><span>
+    <button mat-button (click)="updateProfile()">Default data</button><button mat-button type="submit" [disabled]="!profileForm.valid">Submit</button></span>
+    </div>
+</form>
+<hr>
+<p>Form Value: {{ profileForm.value | json }}</p>
+
+<p>Form Status: {{ profileForm.status }}</p>
 
 
+
+<!--
 <form class="example-form">
     <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Title</mat-label>
@@ -28,7 +89,17 @@
         </mat-autocomplete>
     </mat-form-field>
 </form>
+
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
     <button mat-button [mat-dialog-close]="" cdkFocusInitial>Ok</button>
 </div>
+
+-->
+
+
+<!-- 
+Copyright Google LLC. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at https://angular.io/license
+-->
