--- a/src/app/components/user-login/user-login.component.scss
+++ b/src/app/components/user-login/user-login.component.scss
@@ -1,20 +1,46 @@
-.example-form {
-  min-width: 150px;
+form {
+  padding-top: 1rem;
+  min-width: 100px;
   max-width: 500px;
   width: 100%;
-}
-
-.example-full-width {
-  width: 100%;
-}
-
-.example-option-img {
-  vertical-align: middle;
-  margin-right: 8px;
+  mat-form-field{
+  margin: 5px;
+  input{
+    padding:0 5px;
+  }
 }
 
 
-[dir='rtl'] .example-option-img {
-  margin-right: 0;
-  margin-left: 8px;
+  
+}
+
+label {
+  display: block;
+  margin: 0.5em 0;
+  font-weight: bold;
+}
+h1 {
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 22px;
+  margin: 15px 10px;
+}
+h2 {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 18px;
+  margin: 15px 10px;
+}
+p {
+  font-size: 12px;
+  font-weight: 200;
+  line-height: 12px;
+  margin: 15px 10px;
+  padding: 0;
+}
+ul li {
+  font-size: 12px;
+  font-weight: 200;
+  line-height: 12px;
+  margin: 15px 10px;
 }
