User Login Component style, Contact Page moved to component

--- a/src/app/components/user-login/user-login.component.scss
+++ b/src/app/components/user-login/user-login.component.scss
@@ -1,7 +1,12 @@
+
+mat-dialog{
+  width: 90vw;
+  height: 90vh;
+}
 form {
   padding-top: 1rem;
   min-width: 100px;
-  max-width: 500px;
+  
   width: 100%;
   mat-form-field{
   margin: 5px;
