--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -265,27 +265,4 @@
   <hr mat-divider>
   <div id="contact" class="homepage-tile">
     <h1>Contact me</h1>
-
-
-
-
-    <mat-form-field class="example-full-width" >
-      <mat-label>Leave a comment</mat-label>
-      <textarea matInput placeholder="yeah... write something"></textarea>
-    </mat-form-field>
-
-
-
-
-
-    <h2>Copy my mail</h2>
-    <h3>
-      <div class="contact-clipboard">
-        My Mail
-        <button mat-button cdkCopyToClipboard="ThisIsMyMail@mmail.com" (click)="CopiedMsg()">
-          <mat-icon>content_copy</mat-icon>Copy to clipboard
-        </button>
-      </div>
-    </h3>
-  </div>
-</div>
+<app-contact-page></app-contact-page>
