--- a/src/app/components/projects-grid/projects-grid.component.scss
+++ b/src/app/components/projects-grid/projects-grid.component.scss
@@ -72,12 +72,10 @@ height: 100%;
     align-items: center;
     }
     
-matbutton{
-flex:1 1 0;
-}
+
 mat-card img{
-        width: auto;
-        height: 170px;       
+        width: 100%;
+        height: auto;       
   display:block;
   margin-left:auto;
   margin-right:auto;
