--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -6,12 +6,12 @@
 <form class="mat-typography" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
     <mat-form-field>
         <mat-label for="first-name">First Name: </mat-label>
-        <input matInput id="first-name" type="text" formControlName="firstName" required placeholder="enter your name" >
+        <input matInput id="first-name" type="text" formControlName="firstName" required placeholder="Enter your name" >
     </mat-form-field>
 
     <mat-form-field>
         <mat-label for="last-name">Last Name: </mat-label>
-        <input matInput id="last-name" type="text" formControlName="lastName" placeholder="enter your last name">
+        <input matInput id="last-name" type="text" formControlName="lastName" placeholder="Enter your last name">
     </mat-form-field>
 
     <div formGroupName="address">
@@ -19,12 +19,12 @@
         <h2>Address</h2>
         <mat-form-field>
             <mat-label for="street">Street: </mat-label>
-            <input matInput id="street" type="text" formControlName="street" placeholder="enter street name">
+            <input matInput id="street" type="text" formControlName="street" placeholder="Enter street">
         </mat-form-field>
 
         <mat-form-field>
             <mat-label for="city">City: </mat-label>
-            <input matInput id="city" type="text" formControlName="city" placeholder="Enter City name">
+            <input matInput id="city" type="text" formControlName="city" placeholder="Enter City">
         </mat-form-field>
 
         <mat-form-field>
