--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -78,7 +78,8 @@
     <input type="text"  matInput>
 </mat-form-field>
 
-    <mat-form-field class="example-full-width" appearance="fill">        <mat-label>Country</mat-label>
+    <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Country</mat-label>
         <input matInput aria-label="Country" [matAutocomplete]="auto1" [formControl]="countryForm">
         <mat-autocomplete #auto1="matAutocomplete">
             <mat-option *ngFor="let country of filteredCountries | async" [value]="country">
