--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -11,8 +11,8 @@
                 <img [src]="slide.image_url" class="img_slide" alt={{slide.img_alt}}>
             </div>
             <div class="carousel-caption">
-                <h1>{{slide.title}}</h1>
-                <h3>{{slide.description}}.</h3>
+                <h3>{{slide.title}}</h3>
+                <p>{{slide.description}}.</p>
                 </div>
                 </ng-template>
                 </ngb-carousel>
