--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -36,7 +36,9 @@
 
       <mat-tab label="Short">
         <div class="mat-tab">
-       
+      <h1>
+        Brief info about me
+      </h1>
           <h2>
            I'm Jan Warzecha from Wrocław, Poland
           </h2>
@@ -55,10 +57,10 @@
             </li>
             <li>
               8 years of professional experience in resource prospecting and exploration projects / mining / drilling /
-              environment / energy
+              environment / energy / documentation / mapping / moddeling
             </li>
             <li>
-            <b> I'm currently looking to remotely join frontend / full-stack team</b>
+            <b>I'm currently looking to remotely join frontend / full-stack team</b>
             </li>
           </ul>
         </div>
@@ -75,7 +77,7 @@
           <p>2017 - 2021, Wrocław</p>
           <ul>
             <li>
-              VIP transport - cooperation with hotels etc.
+              VIP transport
             </li>
           </ul>
           <h1>
@@ -137,7 +139,7 @@
           <p>Self-Taught Coder</p>
           <p>English speaker - C2</p>
           <p>Graduated and experienced in Exploration Geology</p>
-          <p>Curious without limits </p>
+          <p>Curious without limits</p>
         </div>
       </mat-tab>
     </mat-tab-group>
@@ -147,10 +149,10 @@
       <mat-tab-group>
         <mat-tab class="mat-tab" label="W skrócie">
           <h1>
-            Krótki życiorys
+            Krótkie info o mnie
           </h1>
           <h2>
-            Cześć, jestem Jan Warzecha, Wrocław
+            Cześć, jestem Jan Warzecha z Wrocławia
           </h2>
           <ul>
             <li>
@@ -170,7 +172,7 @@
               górnictwa / wiertnictwa / ochrony środowiska / energetyki
             </li>
             <li>
-              Obecnie chcę dołączyć zdalnie do zespołu frontend / full-stack
+              Obecnie chcę dołączyć do zespołu Developerów 
             </li>
           </ul>
         </mat-tab>
@@ -186,7 +188,7 @@
 <p>2017 - 2021, Wrocław</p>
 <ul>
   <li>
-    transport VIP - współpraca z hotelami itp.
+    transport VIP 
   </li>
 </ul>
 <h1>
@@ -214,7 +216,7 @@
   Centrum Badawczo-Rozwojowe Wrocław
 </h1>
 <h2>
-  Specjalista ds. Inżynierii - Geolog Poszukiwań</h2>
+  Specjalista ds. Inżynierii - Geolog Poszukiwawczy</h2>
 <p>
   2010 - 2016 Wrocław, Polska
 </p>
@@ -232,10 +234,10 @@
     Szacowanie zasobów: miedź, srebro, nikiel, węgiel
   </li>
   <li>
-    Reprezentacja inwestora, nadzór nad budową wiertni
+    Reprezentacja inwestora, nadzór nad robotami wiertniczymi
   </li>
   <li>
-    Zapewnienie jakości, rejestracja danych, pobieranie próbek podstawowych, logistyka
+    Koordynacja pracy urządzeń wiertniczych, zapewnienie jakości, cyrkulacja danych i dokumentów, pobieranie próbek podstawowych, logistyka
   </li>
 </ul>
 
