--- a/documentation/components/NgbCaruselComponent.html
+++ b/documentation/components/NgbCaruselComponent.html
@@ -902,8 +902,8 @@ export class NgbCaruselComponent {
                 &lt;img [src]&#x3D;&quot;slide.image_url&quot; class&#x3D;&quot;img_slide&quot; alt&#x3D;{{slide.img_alt}}&gt;
             &lt;/div&gt;
             &lt;div class&#x3D;&quot;carousel-caption&quot;&gt;
-                &lt;h1&gt;{{slide.title}}&lt;/h1&gt;
-                &lt;h3&gt;{{slide.description}}.&lt;/h3&gt;
+                &lt;h3&gt;{{slide.title}}&lt;/h3&gt;
+                &lt;p&gt;{{slide.description}}.&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;/ng-template&gt;
                 &lt;/ngb-carousel&gt;
@@ -975,9 +975,9 @@ export class NgbCaruselComponent {
                     <code>./ngb-carusel.component.scss</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss">.img-wrapper {
-  width:84vw; //adapt angular good practices
-  height:74vh;
-  
+  width: 84vw; //adapt angular good practices
+  height: 74vh;
+
   margin: auto auto;
 }
 .img_slide {
@@ -989,39 +989,20 @@ export class NgbCaruselComponent {
 
 .carousel-caption {
   white-space: pre-line; // \n\u2022 work properly in TS
-  text-align: left;
- 
- background-color: black;
+  padding: 0px 5px;
+  
+  color: white;
+mix-blend-mode: difference;
+
   position: absolute;
- 
+  transform: translateY(0%);
   height: auto;
-  max-height:60vh;
-  text-shadow: 1px 1px 1px black;
-  color: #fff;
+  text-align: left;
+  // text-shadow: 1px 1px 1px black;
   display: inline;
-  padding: 0px;
 
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
-
-  h1 {
-    font-size: 22px;
-    font-weight: bold;
-    line-height: 1em;
-    margin: 15px 5px;
-  }
-  h2 {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 1.5em;
-    margin: 15px 0 25px 0;
-  }
-  h3 {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-    margin: 15px 0 25px 0;
-  }
 }
 .button-group {
   display: flex;
@@ -1029,7 +1010,7 @@ export class NgbCaruselComponent {
   column-gap: 1em;
   row-gap: 1em;
   align-content: center;
-  justify-content: space-around;  
+  justify-content: space-around;
   max-width: 100%;
 }
 .cycle_pause_button {
@@ -1037,7 +1018,7 @@ export class NgbCaruselComponent {
   min-width: max-content;
 }
 .slide-controls-panel {
-  width:inherit;
+  width: inherit;
 }
 
 .button-group-panel {
@@ -1046,16 +1027,15 @@ export class NgbCaruselComponent {
   flex-flow: row wrap;
   row-gap: 1em;
   column-gap: 1em;
- align-content: center;
+  align-content: center;
   justify-content: space-around;
   @media (min-width: 800px) {
     max-width: 50vw;
   }
   .interval-right-align {
     text-align: center;
-    
+
     font-weight: 600;
-    
   }
 
   input.interval-right-align::-webkit-outer-spin-button,
@@ -1095,7 +1075,7 @@ export class NgbCaruselComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="container">    <ngb-carousel #carousel  [showNavigationArrows]="showNavigationArrows"        [showNavigationIndicators]="showNavigationIndicators" [pauseOnHover]="pauseOnHover"[interval]="interval.value" (slide)="onSlide($event)">                         <ng-template ngbSlide *ngFor="let slide of slides"        (ngModelChange)="(onSelect)"                 >            <div class="img-wrapper">                <img [src]="slide.image_url" class="img_slide" alt={{slide.img_alt}}>            </div>            <div class="carousel-caption">                <h1>{{slide.title}}</h1>                <h3>{{slide.description}}.</h3>                </div>                </ng-template>                </ngb-carousel><hr>    <div class="button-group" aria-label="Carousel toggle controls">        <button mat-raised-button isIconButton:true (click)="togglePaused()" class="cycle_pause_button">            {{paused ? \'Cycle\' : \'Pause\'}}            <mat-icon>{{paused ? \'play_circle_outline\' : \'pause_circle_outline\'}}</mat-icon>        </button>    <mat-accordion class="slide-controls-panel">    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">        <mat-expansion-panel-header>            <mat-panel-title>                Controls:            </mat-panel-title>            <mat-panel-description>                 {{panelOpenState ? \'Open\' : \'Closed\'}}            </mat-panel-description>        </mat-expansion-panel-header>    <div class="button-group-panel" aria-label="Carousel toggle controls">            <mat-form-field class="mat-elevation-z2 form-center" floatLabel="always">                <mat-label>1 second = 1000 ms</mat-label>                <input matInput type="number"  [formControl]="interval" class="interval-right-align"                    placeholder={{interval.value}}>                            </mat-form-field>                    <button mat-raised-button aria-label="Toggle navigation arrows" (click)="showNavigationArrows = !showNavigationArrows">                        <mat-icon>keyboard_arrow_left</mat-icon>                        Toggle navigation arrows                        <mat-icon>keyboard_arrow_right</mat-icon>                    </button>                    <button mat-raised-button aria-label="Toggle navigation                                    indicators" (click)="showNavigationIndicators = !showNavigationIndicators">                        <mat-icon>minimize</mat-icon>                        <mat-icon>minimize</mat-icon>                        <mat-icon>minimize</mat-icon>                        Toggle  indicators                    </button>                    <button mat-raised-button (click)="pauseOnHover = !pauseOnHover">Pause on hover                    </button>                    <button mat-raised-button [(ngModel)]="pauseOnFocus">                        Pause on focus                    </button>                    <button mat-raised-button [(ngModel)]="unpauseOnArrow">                        Unpause when arrow click                    </button>                    <button mat-raised-button [(ngModel)]="pauseOnIndicator">                        Pause when click indicator                    </button>                </div>            </mat-expansion-panel>                        </mat-accordion>    </div>   </div>'
+        var COMPONENT_TEMPLATE = '<div><div class="container">    <ngb-carousel #carousel  [showNavigationArrows]="showNavigationArrows"        [showNavigationIndicators]="showNavigationIndicators" [pauseOnHover]="pauseOnHover"[interval]="interval.value" (slide)="onSlide($event)">                         <ng-template ngbSlide *ngFor="let slide of slides"        (ngModelChange)="(onSelect)"                 >            <div class="img-wrapper">                <img [src]="slide.image_url" class="img_slide" alt={{slide.img_alt}}>            </div>            <div class="carousel-caption">                <h3>{{slide.title}}</h3>                <p>{{slide.description}}.</p>                </div>                </ng-template>                </ngb-carousel><hr>    <div class="button-group" aria-label="Carousel toggle controls">        <button mat-raised-button isIconButton:true (click)="togglePaused()" class="cycle_pause_button">            {{paused ? \'Cycle\' : \'Pause\'}}            <mat-icon>{{paused ? \'play_circle_outline\' : \'pause_circle_outline\'}}</mat-icon>        </button>    <mat-accordion class="slide-controls-panel">    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">        <mat-expansion-panel-header>            <mat-panel-title>                Controls:            </mat-panel-title>            <mat-panel-description>                 {{panelOpenState ? \'Open\' : \'Closed\'}}            </mat-panel-description>        </mat-expansion-panel-header>    <div class="button-group-panel" aria-label="Carousel toggle controls">            <mat-form-field class="mat-elevation-z2 form-center" floatLabel="always">                <mat-label>1 second = 1000 ms</mat-label>                <input matInput type="number"  [formControl]="interval" class="interval-right-align"                    placeholder={{interval.value}}>                            </mat-form-field>                    <button mat-raised-button aria-label="Toggle navigation arrows" (click)="showNavigationArrows = !showNavigationArrows">                        <mat-icon>keyboard_arrow_left</mat-icon>                        Toggle navigation arrows                        <mat-icon>keyboard_arrow_right</mat-icon>                    </button>                    <button mat-raised-button aria-label="Toggle navigation                                    indicators" (click)="showNavigationIndicators = !showNavigationIndicators">                        <mat-icon>minimize</mat-icon>                        <mat-icon>minimize</mat-icon>                        <mat-icon>minimize</mat-icon>                        Toggle  indicators                    </button>                    <button mat-raised-button (click)="pauseOnHover = !pauseOnHover">Pause on hover                    </button>                    <button mat-raised-button [(ngModel)]="pauseOnFocus">                        Pause on focus                    </button>                    <button mat-raised-button [(ngModel)]="unpauseOnArrow">                        Unpause when arrow click                    </button>                    <button mat-raised-button [(ngModel)]="pauseOnIndicator">                        Pause when click indicator                    </button>                </div>            </mat-expansion-panel>                        </mat-accordion>    </div>   </div>'
     var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'ContactPageComponent', 'selector': 'app-contact-page'},{'name': 'CounterDataComponent', 'selector': 'app-counter-data'},{'name': 'FileTreeComponent', 'selector': 'app-file-tree'},{'name': 'HomepageComponent', 'selector': 'app-homepage'},{'name': 'MenuComponent', 'selector': 'app-menu'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NgbCaruselComponent', 'selector': 'app-ngb-carusel'},{'name': 'ProjectsGridComponent', 'selector': 'app-projects-grid'},{'name': 'ThemeSwitchComponent', 'selector': 'app-theme-switch'},{'name': 'UserLoginComponent', 'selector': 'app-user-login'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'NgbCaruselComponent'};
