--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -65,6 +65,8 @@
     <p>Form Status: {{ profileForm.status }}</p>
 
 </mat-tab>
+
+<!--
 <mat-tab label="Personal data">
 
 
@@ -89,7 +91,7 @@
         <input matInput aria-label="Country" [matAutocomplete]="auto1" [formControl]="countryForm">
         <mat-autocomplete #auto1="matAutocomplete">
             <mat-option *ngFor="let country of filteredCountries | async" [value]="country">
-                
+                <img class="example-option-img" aria-hidden [src]="country.flag" height="25">
                 <span>{{country.name}}</span> 
                 
             </mat-option>
@@ -104,5 +106,8 @@
 
 </form>
 </mat-tab>
+
+-->
+
 </mat-tab-group>
 
