--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div id="welcome-page" class="container-fluid">
-    <header class="docs-header-background" aria-label="Get started" id="homepage-header">
+    <header class="docs-header-background" aria-label="Welcome" id="homepage-header">
     <div class="docs-header-section">
       <div class="docs-header-headline">
         <h1 class="mat-h1">Jan Warzecha</h1>
