--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -147,7 +147,7 @@ mat-icon {
 .docs-header-button-group {
   position: absolute;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   row-gap: 1em;
   column-gap: 1em;
   align-items: center;
@@ -199,6 +199,7 @@ mat-icon {
       line-height: 12px;
       margin: 15px 10px;
       padding: 0;
+      
     }
   }
 }
