--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -265,7 +265,7 @@
     <app-ngb-carusel></app-ngb-carusel>
   </div>
   <hr mat-divider>
-  <div id="contact" class="homepage-tile">
+  <div id="contact" class="homepage-tile contact">
     <h1>Contact me</h1>
 <app-contact-page></app-contact-page>
 </div>
