--- a/src/app/components/projects-grid/projects-grid.component.html
+++ b/src/app/components/projects-grid/projects-grid.component.html
@@ -12,12 +12,11 @@
               <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item (click)="OnExpand()" class="toggle_expand_button">Expand</button>
-              <button mat-menu-item (click)="toggleExpanded()" class="toggle_expand_button">
-                {{expanded ? 'Expand' : 'Collapse'}}
+              
 
-              </button>
-              <button mat-menu-item #tooltip="matTooltip"
+
+
+              <button mat-menu-item #tooltip="matTooltip"  routerLink="/{{card.routerLink}}" routerLinkActive="active"
                 matTooltip="Read more about {{card.title}} project">More</button>
 
               <a mat-menu-item href="{{card.gh_url}}" target="_blank" #tooltip="matTooltip"
@@ -30,7 +29,7 @@
         <mat-card-content class="dashboard-card-content">
           <div class="card-subtitle">{{card.subtitle}}</div>
           <img mat-card-s-image [src]="card.img_url" class="img_project">
-          <div class="card-description">{{card.description}}</div>
+          
           <mat-card-actions class="button-group">
           </mat-card-actions>
 
